buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://maven.eveoh.nl/content/repositories/releases"
        }
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.1.RELEASE"
        classpath "se.transmode.gradle:gradle-docker:1.2"
        classpath "org.codehaus.groovy:groovy-all:2.3.6"
    }
}

allprojects {

    apply plugin: "java"
    apply plugin: "eclipse"
    apply plugin: "idea"
    apply plugin: "docker"
    apply plugin: "spring-boot"
    apply plugin: 'application'
// apply plugin: "scala"

    jar {
        version = "0.1"
    }

    repositories {
        mavenCentral()
    }

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    ext {
        jacksonVersion = "1.9.13"
        jackson2Version = "2.3.2"
        bouncycastleVersion = "1.53"
        esperVersion = "5.3.0"
        tikaVersion = "1.11"
        httpcomponentsHttpclientVersion = "4.5.1"
        springIntegrationVersion = "4.2.2.RELEASE"
    }

    dependencies {
        compile "org.springframework.boot:spring-boot-starter-amqp"
        compile "org.springframework.amqp:spring-rabbit"
        compile "org.springframework.amqp:spring-amqp" 
        compile "com.jayway.jsonpath:json-path:2.0.0"
        compile "org.apache.commons:commons-lang3:3.4"
        compile "commons-io:commons-io:2.4"
        compile "com.thoughtworks.xstream:xstream:1.4.8"
        compile "org.codehaus.jettison:jettison:1.3.7"
        compile "org.codehaus.jackson:jackson-core-asl:$jacksonVersion"
        compile "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
        compile "com.fasterxml.jackson.core:jackson-core:$jackson2Version"
        compile "com.fasterxml.jackson.core:jackson-databind:$jackson2Version"
        compile "com.google.code.gson:gson:2.5"
        compile "com.google.guava:guava:18.0"

        testCompile "junit:junit"
        testCompile "org.springframework.boot:spring-boot-starter-test"
    }

    task wrapper(type: Wrapper) {
        gradleVersion = "2.8"
    }

    // applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
}

project(":application") {

}

project(":application:scanner") {
    dependencies {
        compile project(':application')
        compile "org.apache.nutch:nutch:1.11"
        compile "org.apache.tika:tika-core:$tikaVersion"
        compile "org.apache.tika:tika-parsers:$tikaVersion"
        compile "org.apache.tika:tika-xmp:$tikaVersion"
        compile "org.apache.tika:tika-java7:$tikaVersion"
        compile "org.apache.tika:tika-serialization:$tikaVersion"
        compile "org.apache.tika:tika-translate:$tikaVersion"
        compile "org.apache.tika:tika:$tikaVersion"
        compile 'nekohtml:nekohtml:1.9.6.2'

        compile 'org.elasticsearch:elasticsearch:2.1.1'
        compile 'com.fasterxml.jackson.core:jackson-core:2.6.4'

    }
    configurations {
        all*.exclude group: "org.slf4j", module: "slf4j-log4j12"
    }
    bootRun {
        // mainClass = "org.application.crawler.CrawlerStarter"
        main = "org.application.rabbitmq.datadiode.DatadiodeBlackStarter"
        jvmArgs = ["-d64", "-Xmx8g", "-XX:+PrintGCTimeStamps", "-verbose:gc", "-DsocksProxyHost=tor","-DsocksProxyPort=9050"]
    }
}
